[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name = "automower_ble"
version = "0.1.33"
description = "An unofficial reverse engineered Husqvarna Automower Connect BLE library"
readme = "README.md"
requires-python = ">=3.10"
authors     = [
    {name = "Alistair Francis", email = "alistair@alistair23.me"}
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]

[tool.ruff]
required-version = ">=0.4.2"

[tool.setuptools.package-data]
automower_ble = ["*.json"]
